# zmk-feature-split-esb

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  west.yml
dts/bindings/: zmk,esb.yaml  zmk,split-esb.yaml
include/: zmk_split_esb.h
src/: central.c  esb_batch.c  esb_batch.h  esb_hid_state.h  esb_keepalive.c  esb_keepalive.h  esb_link.c  esb_link.h  esb_link_central.c  esb_link_internal.h  esb_link_peripheral.c  esb_sensor_sync.c  esb_sensor_sync.h  esb_sleep.c  esb_survey.c  esb_survey.h  esb_wire.c  esb_wire.h  hid_state_central.c  hop.c  hop.h  hop_central.c  hop_peripheral.c  hop_policy.c  hop_policy.h  peripheral.c
tests/unit/: CMakeLists.txt  testcase.yaml
tests/unit/src/: test_esb_hid_state.c  test_esb_keepalive.c  test_esb_sensor_sync.c  test_hop_policy.c
zephyr/: module.yml  patches.yml
zephyr/patches/nrf/: mpsl-clock-timeout-static.patch  nrf54lm20a-uart-rxto-type.patch  oberon-ctr-drbg-no-aes-select.patch  openthread-kconfig-defconfig-types.patch  secure-storage-its-name-len-type.patch  sys-clock-static-zephyr41.patch
